--- a/src/reference-manual/analysis.qmd
+++ b/src/reference-manual/analysis.qmd
@@ -545,7 +545,7 @@ Now contrast the second approach above with the unthinned alternative,
 * Generate 10,000 draws after convergence and save every draw.
 
 This will typically have a higher effective sample than the thinned
-sample consisting of every tenth drawn.  But the gap might not be very
+sample consisting of every tenth draw.  But the gap might not be very
 large.  To summarize, *the only reason to thin a sample is to reduce
 memory requirements*.
 
