add url for ADVI paper

--- a/src/bibtex/all.bib
+++ b/src/bibtex/all.bib
@@ -286,7 +286,7 @@ Percentage Points of the Normal Distribution}, volume = {37}, year = {1988} }
 @article{kucukelbir:2017,
   title={Automatic differentiation variational inference}, author={Kucukelbir,
   Alp and Tran, Dustin and Ranganath, Rajesh and Gelman, Andrew and Blei, David
-  M}, journal={Journal of machine learning research}, year={2017}
+  M}, journal={Journal of machine learning research}, year={2017}, url= {https://jmlr.org/papers/v18/16-107.html}
 }
 
 @article{Jordan:1999,
