add url for PSIS paper

--- a/src/bibtex/all.bib
+++ b/src/bibtex/all.bib
@@ -1280,7 +1280,7 @@ Mathematics}, number = {14}, location = {Philadelphia} }
   author  = {Aki Vehtari and Daniel Simpson and Andrew Gelman and Yuling Yao and
   Jonah Gabry}, title   = {Pareto smoothed importance sampling}, journal =
   {Journal of Machine Learning Research}, year    = {2024}, volume  = {25},
-  number  = {72}, pages   = {1--58}
+  number  = {72}, pages   = {1--58}, url = {https://jmlr.org/papers/v25/19-556.html}
 }
 
 @article{Gelman:etal:2020:workflow,
